--- a/ultrasimpleblog-project/index.yaml
+++ b/ultrasimpleblog-project/index.yaml
@@ -20,3 +20,26 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: blog_article
+  properties:
+  - name: __key__
+    direction: desc
+
+- kind: blog_article
+  properties:
+  - name: published
+  - name: __key__
+    direction: desc
+
+- kind: blog_article
+  properties:
+  - name: published
+  - name: created
+    direction: desc
+
+- kind: blog_article
+  properties:
+  - name: published
+  - name: published_date
+    direction: desc
